%% BEYOND SIS+LMS+CRM+Keuangan — ERD inti (PostgreSQL app utama)
%% Render: mermaid.live / `mmdc erd.mmd erd.svg`
erDiagram
  PERSON ||--o{ CONTACT_IDENTIFIER : owns
  PERSON ||--o| STUDENT : is
  PERSON ||--o| GUARDIAN : is
  PERSON ||--o| STAFF : is
  PERSON ||--o| USER_ACCOUNT : logs_in
  USER_ACCOUNT ||--o{ ROLE_GRANT : granted
  USER_ACCOUNT ||--o{ DEVICE_REGISTRATION : on_device
  GUARDIAN ||--o{ GUARDIAN_STUDENT : links
  STUDENT ||--o{ GUARDIAN_STUDENT : has
  PROGRAM ||--o{ CURRICULUM_LEVEL : has
  CURRICULUM_LEVEL ||--o{ LEVEL_TERM : has
  PROGRAM ||--o{ PROGRAM_CYCLE_CONFIG : versioned
  STUDENT ||--o{ ENROLLMENT : registers
  PROGRAM ||--o{ ENROLLMENT : of
  CENTRE ||--o{ ENROLLMENT : teaching
  ACADEMIC_YEAR ||--o{ ACADEMIC_MONTH : contains
  CLASS_SECTION ||--o{ CYCLE : billed
  PROGRAM_CYCLE_CONFIG ||--o{ CYCLE : snapshot
  ACADEMIC_MONTH ||--o{ CYCLE : in
  CYCLE ||--o{ MEETING : contains
  CLASS_SECTION ||--o{ SECTION_MEMBERSHIP : groups
  ENROLLMENT ||--o{ SECTION_MEMBERSHIP : member
  CLASS_SECTION ||--o{ SCHEDULE_SLOT : meets
  STAFF ||--o{ TEACHER_ASSIGNMENT : assigned
  CLASS_SECTION ||--o{ TEACHER_ASSIGNMENT : has
  MEETING ||--o{ ATTENDANCE : records
  ENROLLMENT ||--o{ ATTENDANCE : attends
  MEETING ||--o{ TEACHING_ATTENDANCE : records
  STAFF ||--o{ TEACHING_ATTENDANCE : teaches
  MEETING ||--o{ DAILY_SCORE : on
  ENROLLMENT ||--o{ DAILY_SCORE : scored
  ENROLLMENT ||--o{ IMPACT_RATING : rated
  ENROLLMENT ||--o{ UNIT_TEST_RESULT : has
  ENROLLMENT ||--o{ MONTESSORI_OBSERVATION : has
  ENROLLMENT ||--o{ TERM_PLACEMENT : history
  ENROLLMENT ||--o{ PROMOTION_EVENT : promoted
  ENROLLMENT ||--o{ REPORT_CARD : receives
  REPORT_CARD ||--o{ REPORT_CARD_COMPONENT : composed
  REPORT_CARD ||--o{ REPORT_CARD_RELEASE : released
  ENROLLMENT ||--o{ STUDENT_LEAVE : takes
  STAFF ||--o{ TEACHING_OBSERVATION : observed
  STAFF ||--o{ TDI_SNAPSHOT : scored
  MONTESSORI_CURRICULUM ||--o{ MONTESSORI_SUBJECT : has
  MONTESSORI_SUBJECT ||--o{ MONTESSORI_MATERIAL : has
  ENROLLMENT ||--o{ MATERIAL_MASTERY : masteries
  MONTESSORI_MATERIAL ||--o{ MATERIAL_MASTERY : tracked
  ACQUISITION_CHANNEL ||--o{ CRM_LEAD : acquired_via
  CONTACT_IDENTIFIER ||--o{ CRM_LEAD : phone_key
  CRM_LEAD ||--o{ CRM_STAGE_EVENT : progresses
  CRM_LEAD ||--o| CRM_REGISTRATION : converts
  CRM_REGISTRATION ||--o| ENROLLMENT : creates
  CRM_LEAD ||--o{ ALERT : raises
  ENROLLMENT ||--o{ INVOICE : billed
  CYCLE ||--o{ INVOICE : per
  INVOICE ||--o{ PAYMENT : paid_by
  GATEWAY_TRANSACTION ||--o| PAYMENT : matched
  CASH_CATEGORY ||--o{ CASH_TRANSACTION : classified
  CENTRE ||--o{ CASH_TRANSACTION : records
  STUDENT ||--o{ EXAM_DISCOUNT_VOUCHER : earns
  AUDIT_LOG }o--|| USER_ACCOUNT : by_actor
  PERIOD_LOCK }o--|| CYCLE : locks
  SYNC_BATCH ||--o{ SYNC_ITEM : contains
  USER_ACCOUNT ||--o{ SYNC_BATCH : pushes
  MOODLE_USER_LINK }o--|| USER_ACCOUNT : maps
